# drinkapi

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
.github/workflows/: general.yaml
configuration/: base.yaml
migrations/: 20230116222737_create_products_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: home.rs  info.rs  mod.rs
src/routes/product/: mod.rs  product.rs  routes.rs
